new design complete

--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,28 +1,19 @@
-{% assign locale = include.lang %}
+{% assign data = site.data.i18n[include.lang]['archive'] %}
 
-{% comment %} find correct archive subdir {% endcomment %}
-{% if locale == 'de' %}
-	{% assign subdir = '/archiv' %}
-{% else %}
-	{% assign subdir = '/en/archive' %}
-{% endif %}
-
-
-{% comment %} create archive menu {% endcomment %}
 <div id="dropDown">
-<label for="dropDownSwitch">{{ site.data.i18n[locale]['strings'].select_a_month }}<span class="symbol">&#xf431;</span></label>
+<label for="dropDownSwitch">{{ data['strings'].selectAMonth }}<span class="symbol">&#xf431;</span></label>
 <input type="checkbox" id="dropDownSwitch" />
 <ul>			
 {% assign oldValue = '' %}
 {% for post in site.posts %}
 	{% for category in post.categories %}
-		{% if category == locale %}
+		{% if category == include.lang %}
 			{% assign month = post.date | date: '%m' %}
 			{% assign year = post.date | date: '%Y' %}
 			{% assign value = post.date | date: '%m / %Y' %}
 			{% if value != oldValue %}
 				{% assign oldValue = value %}
-	<li><a href="{{ subdir }}/{{ year }}/{{ month }}/">{{ value }}</a></li>	
+	<li><a href="{{ data.url }}/{{ year }}/{{ month }}/">{{ value }}</a></li>	
 			{% endif %}
 		{% endif %}
 	{% endfor %}
