--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -33,8 +33,8 @@ $heightHeader: 4.5em;
 $marginDefault: 1em;
 $marginHeader: 0.75em;
 $lineHeight: 1.5em;
-$padding: 2em;
-$spaceSmall: 1em;
+$space: 1em;
+$spaceSmall: $space;
 $widthAside: 33%;
 $widthContent: 60%;
 $widthContentMin: 1200px;
