--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,34 +1,28 @@
 ---
 layout: default
+type: post
 ---
 
-{% capture locale %}{{ page.url | truncate: 3, "" | remove: "/" }}{% endcapture %}
-{% unless site.authorized_locales contains locale %}
-    {% assign locale = site.default_locale %}
-{% endunless %}
-
-
-{% comment %} assign subdir string for links {% endcomment %}
-{% if locale == "de" %}
-    {% assign subdir = "" %}
-{% else %}
-    {% capture subdir %}/{{ locale }}{% endcapture %}
-{% endif %}
+{% assign data = site.data.i18n[page.lang]['post'] %}
 
 
 {% comment %} assign tag string {% endcomment %}
 {% if page.tags.size == 0 %}
-    {% assign tagList = site.data.i18n[locale].no_tags_for_article %}
+    {% assign tagList = data['strings'].noTags %}
 {% else %}
-    {% capture tagList %}{% for tag in page.tags %}, <a href="{{ subdir }}/tags/{{ tag | downcase | cgi_escape }}/">{{ tag | downcase }}</a>{% endfor %}{% endcapture %}
+    {% capture tagList %}{% for tag in page.tags %}, <a href="{{ data.url }}/tags/{{ tag | downcase | cgi_escape }}/">{{ tag | downcase }}</a>{% endfor %}{% endcapture %}
 {% endif %}
 
 
 {% comment %} build article {% endcomment %}
+<section>
+    {{ data.title }}
+</section>
+
 <article>
 	<h1>{{ page.title }}</h1>
 	<p>		
-		<span class="symbol">&#xf307;</span><span class="date">{{ page.date | date: site.data.i18n[locale]['strings'].date_format }}</span><br/>
+		<span class="symbol">&#xf307;</span><span class="date">{{ page.date | date: data['strings'].dateFormat }}</span><br/>
 		<span class="symbol">&#xf302;</span>{{ tagList | remove_first: ', ' }}
 	</p>
 	
