--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -3,12 +3,15 @@
 	@include vendor(border-radius, 50%);
 }
 
+.bold { font-weight: bold; }
+
 .centerInLayout {
 	margin: 0 auto;	
 	max-width: 100%;
 	min-width: $widthContentMin;
 	position: relative;	
 	width: $widthContent;
+	padding: 0 $space;
 }
 
 .floatRight {
