--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -18,9 +18,12 @@
 $colBackground: #aaa;
 $colForeground: ivory;
 $colHeaderBackground: #777;
-$colLink: $colHeaderBackground; //#789;
+$colLink: #9ab;
+$colLinkLight: #fff;
+$colLinkLightHover: #9ab;
+$colLinkHover: #aaa;
 $colTableLight: #ddd;
-$colTableDark: $colBackground;
+$colTableDark: #aaa;
 $colTextLight: #fff;
 $colTextDark: #000;
 
