--- a/_includes/tagCloud.html
+++ b/_includes/tagCloud.html
@@ -6,7 +6,7 @@
 	{% assign tagCount = 0 %}
 	{% for post in site.tags[tagName] %}
 		{% assign category = post.url | truncate: 3, "" | remove: "/" %}		
-		{% if category == include.lang %}
+		{% if category == language %}
 			{% assign tagCount = tagCount | plus: 1 %}
 		{% endif %}
 	{% endfor %}	
@@ -25,13 +25,13 @@
 
 
 {% comment %} show result {% endcomment %}
-{% assign data = site.data.i18n[include.lang]['tag'] %}
+{% assign tagCloudData = site.data.i18n[language]['tag'] %}
 {% if tagList.size == 0 %}
-	{{ data.empty }}
+	{{ tagCloudData['strings'].empty }}
 {% else %}	
 	{% for tag in tagList %}
 		{% assign tagPair = tag | split: ';' %}
-		{% capture title %}{{ tagPair[2] }}&nbsp;{% if tagPair[2] == "1" %}{{ data['strings'].article }}{% else %}{{ data['strings'].articles }}{% endif %}{% endcapture %}
-		{% if forloop.first %}{% else %}-->{% endif %}<a class="tag" title="{{ title }}" href="{{ data.url }}/{{ tagPair[0] | cgi_escape }}/">{{ tagPair[0] }}</a>{% if forloop.last %}{% else %}<!--{% endif %}
+		{% capture title %}{{ tagPair[2] }}&nbsp;{% if tagPair[2] == "1" %}{{ tagCloudData['strings'].article }}{% else %}{{ tagCloudData['strings'].articles }}{% endif %}{% endcapture %}
+		{% if forloop.first %}{% else %}-->{% endif %}<a class="tag" href="{{ tagCloudData.url }}/{{ tagPair[0] | cgi_escape }}/">{{ tagPair[0] }}</a>{% if forloop.last %}{% else %}<!--{% endif %}
 	{% endfor %}
 {% endif %}
